Fix clipping issue with title glow

--- a/src/Components/Landing/Landing.css
+++ b/src/Components/Landing/Landing.css
@@ -15,6 +15,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 #title-header {
@@ -28,11 +30,12 @@
 
 #title-header-glow {
     font-family: Roboto, sans-serif;
-    font-size: 7em;
+    font-size: 4em;
     color: rgb(2, 2, 249);
     position: absolute;
     transform: translateY(-50%);
     filter: blur(20px);
+    text-overflow: clip;
 }
 
 #sub-title-header {
@@ -46,6 +49,9 @@
 @media screen and (min-width: 750px) {
     #title-header {
         font-size: 5em;
+    }
+    #title-header-glow {
+        font-size: 7em;
     }
     #sub-title-header {
         font-size: 5em;
