--- a/src/Components/Space/Space.css
+++ b/src/Components/Space/Space.css
@@ -12,7 +12,7 @@
     color: rgb(197, 197, 197);
     font-size: 3em;
     position: absolute;
-    top: 50%;
+    top: 45%;
     left: 50%;
     transform: translate3d(-50%, -50%, -300px);
     cursor: pointer;
